Fix Spacing between input fields on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1094,3 +1094,8 @@ kbd {
   }
 
 }
+
+input {
+    margin-bottom: 5px;
+}
+
